--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!-- Link Bootstrap, Font Awesome, CSS, jQuery and JavaScript Start -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<!-- Link Build, CSS & FontAwesome Start -->
+    <script src="build/js/vendor.min.js" type="text/javascript"></script>
+    <script src="build/js/app.js" type="text/javascript"></script>
+    <link href="build/css/vendor.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-1.12.4.js"></script>
-    <script src="js/scripts.js"></script>
-<!-- Link Bootstrap, Font Awesome, CSS, jQuery and JavaScript End -->
+    <link href="./css/styles.css" rel="stylesheet">
+<!-- Link Build, CSS & FontAwesome End -->
     <title></title>
   </head>
   <body>
